proyecto de prueba

--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=InventoryStock
 
-spring.datasource.url=jdbc:postgresql://192.168.100.81:5432/dummy
+#spring.datasource.url=jdbc:postgresql://192.168.100.81:5432/dummy
+spring.datasource.url=jdbc:postgresql://localhost:5432/dummy
 #spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/dummy
 spring.datasource.username=postgres
 spring.datasource.password=admin
